@@ -48,8 +48,6 @@
         <javaModulesSurefireArgLine>
             --add-exports com.azure.core/com.azure.core.implementation.jackson=ALL-UNNAMED
             --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion=ALL-UNNAMED
-            --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
-            --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
         </javaModulesSurefireArgLine>
     </properties>
 
